// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal should render a modal 1`] = `
<CSSTransition
  classNames="wa-modal"
  in={true}
  timeout={300}
  unmountOnExit={true}
>
  <ContextProvider
    value={
      Object {
        "onHide": [Function],
      }
    }
  >
    <div
      className="wa-modal-container"
      key="wa-modal"
    >
      <dialog
        className="wa-modal"
        open={true}
      >
        <div />
      </dialog>
    </div>
  </ContextProvider>
</CSSTransition>
`;

exports[`Modal should render a modal with a header 1`] = `
<CSSTransition
  classNames="wa-modal"
  in={true}
  timeout={300}
  unmountOnExit={true}
>
  <ContextProvider
    value={
      Object {
        "onHide": [Function],
      }
    }
  >
    <div
      className="wa-modal-container"
      key="wa-modal"
    >
      <dialog
        className="wa-modal"
        open={true}
      >
        <div>
          <ModalHeader
            closeButton={false}
          />
          This is the body content.
        </div>
      </dialog>
    </div>
  </ContextProvider>
</CSSTransition>
`;

exports[`Modal should render a modal with body content 1`] = `
<CSSTransition
  classNames="wa-modal"
  in={true}
  timeout={300}
  unmountOnExit={true}
>
  <ContextProvider
    value={
      Object {
        "onHide": [Function],
      }
    }
  >
    <div
      className="wa-modal-container"
      key="wa-modal"
    >
      <dialog
        className="wa-modal"
        open={true}
      >
        <div>
          This is the body content.
        </div>
      </dialog>
    </div>
  </ContextProvider>
</CSSTransition>
`;
